# careful-llm-words-4e0d-codex

./: .resource_finder_complete  README.md  REPORT.md  arxiv_candidates.json  literature_review.md  paperswithcode_search.json  planning.md  pyproject.toml  resources.md  semantic_scholar_search.json
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md  dataset_summary.json
logs/: execution_codex_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_codex_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_draft/tables/: main_results.tex
papers/: README.md  deep_reading_chunk_notes.md  papers_metadata.json
papers/pages/2201.11903/: 2201.11903_cot_prompting_elicits_reasoning_manifest.txt
papers/pages/2305.19835/: 2305.19835_deliberate_then_generate_manifest.txt
papers/pages/2311.07445/: 2311.07445_think_before_you_speak_inner_monologue_manifest.txt
papers/pages/2403.09629/: 2403.09629_quiet_star_think_before_speaking_manifest.txt
results/: binary_tests.csv  flat_outputs.csv  metrics_summary.json  pairwise_tests.csv  raw_outputs.jsonl  run_metadata.json
src/: analyze_results.py  run_experiments.py
