[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.4.0",
    "datasets>=4.6.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "openai>=2.24.0",
    "pandas>=2.3.3",
    "pypdf>=6.7.4",
    "requests>=2.32.5",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
